// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputPrompt > Highlighting and Cursor Display > multi-line scenarios > should display cursor correctly 'at the beginning of a line' in a multiline block 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > first line
   second line
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > multi-line scenarios > should display cursor correctly 'at the end of a line' in a multiline block 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > first line 
   second line
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > multi-line scenarios > should display cursor correctly 'in the middle of a line' in a multiline block 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > first line
   second line
   third line
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > multi-line scenarios > should display cursor on a blank line in a multiline block 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > first line
    
   third line
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'after multi-byte unicode characters' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > 👍A
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'at the beginning of the line' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'at the end of a line with unicode cha…' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello 👍
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'at the end of a short line with unico…' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > 👍 
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'at the end of the line' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello 
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'for multi-byte unicode characters' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello 👍 world
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'mid-word' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello world
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'on a highlighted token' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > run @path/to/file
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'on a space between words' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello world
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > Highlighting and Cursor Display > single-line scenarios > should display cursor correctly 'on an empty line' 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 >   Type your message or @path/to/file
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > History Navigation and Completion Suppression > should not render suggestions during history navigation 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > second message                                                                                   
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-render-collapsed-match 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 (r:)    Type your message or @path/to/file                                                         
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll → 
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll   
 ...                                                                           
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-render-expanded-match 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 (r:)    Type your message or @path/to/file                                                         
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll ← 
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll   
 llllllllllllllllllllllllllllllllllllllllllllllllll                            
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-render-collapsed-match 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 (r:)  commit                                                                                       
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 git commit -m "feat: add search" in src/app                                   
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-render-expanded-match 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 (r:)  commit                                                                                       
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 git commit -m "feat: add search" in src/app                                   
"
`;

exports[`InputPrompt > image path transformation snapshots > should snapshot collapsed image path 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > [Image ...reenshot2x.png]                                                                        
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > image path transformation snapshots > should snapshot expanded image path when cursor is on it 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > @/path/to/screenshots/screenshot2x.png                                                           
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > [Pasted Text: 10 lines]                                                                          
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 2`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > [Pasted Text: 10 lines]                                                                          
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 3`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > [Pasted Text: 10 lines]                                                                          
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 4`] = `
"
  ERROR  Cannot access 'isVoiceModeEnabled' before initialization

 src/ui/components/InputPrompt.tsx:237:3

 234:   const keyMatchers = useKeyMatchers();
 235:   const { stdout } = useStdout();
 236:   const { merged: settings } = useSettings();
 237:   if (isVoiceModeEnabled && settings.experimental.voice.activationMode === 'push-to-talk' &&
     !isRecording) {
 238:       debugLogger.debug(\`[TestDebug] settings.experimental.voice:
     \${JSON.stringify(settings.experimental.voice)}\`);
 239:   }  const kittyProtocol = useKittyKeyboardProtocol();
 240:   const isShellFocused = useShellFocusState();

 - InputPrompt (src/ui/components/InputPrompt.tsx:237:3)
 -Object.react-stack-botto
  m-frame                (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mod
                         e-2/node_modules/react-reconciler/cjs/react-reconciler.development.js:1585
                         9:20)
 -renderWithHook
  s            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_m
               odules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionCompo
  nent              (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/n
                    ode_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19)
 -beginWork
          (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_module
          s/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 -runWithFiberInD
  EV            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
 -performUnitOfWo
  rk            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12834:22)
 -workLoopSync
             (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mod
             ules/react-reconciler/cjs/react-reconciler.development.js:12644:41)
 -renderRootSyn
  c           (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mo
              dules/react-reconciler/cjs/react-reconciler.development.js:12624:11)
 -performWorkOnRo
  ot            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12135:44)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 5`] = `
"
  ERROR  Cannot access 'isVoiceModeEnabled' before initialization

 src/ui/components/InputPrompt.tsx:237:3

 234:   const keyMatchers = useKeyMatchers();
 235:   const { stdout } = useStdout();
 236:   const { merged: settings } = useSettings();
 237:   if (isVoiceModeEnabled && settings.experimental.voice.activationMode === 'push-to-talk' &&
     !isRecording) {
 238:       debugLogger.debug(\`[TestDebug] settings.experimental.voice:
     \${JSON.stringify(settings.experimental.voice)}\`);
 239:   }  const kittyProtocol = useKittyKeyboardProtocol();
 240:   const isShellFocused = useShellFocusState();

 - InputPrompt (src/ui/components/InputPrompt.tsx:237:3)
 -Object.react-stack-botto
  m-frame                (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mod
                         e-2/node_modules/react-reconciler/cjs/react-reconciler.development.js:1585
                         9:20)
 -renderWithHook
  s            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_m
               odules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionCompo
  nent              (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/n
                    ode_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19)
 -beginWork
          (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_module
          s/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 -runWithFiberInD
  EV            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
 -performUnitOfWo
  rk            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12834:22)
 -workLoopSync
             (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mod
             ules/react-reconciler/cjs/react-reconciler.development.js:12644:41)
 -renderRootSyn
  c           (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mo
              dules/react-reconciler/cjs/react-reconciler.development.js:12624:11)
 -performWorkOnRo
  ot            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12135:44)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 6`] = `
"
  ERROR  Cannot access 'isVoiceModeEnabled' before initialization

 src/ui/components/InputPrompt.tsx:237:3

 234:   const keyMatchers = useKeyMatchers();
 235:   const { stdout } = useStdout();
 236:   const { merged: settings } = useSettings();
 237:   if (isVoiceModeEnabled && settings.experimental.voice.activationMode === 'push-to-talk' &&
     !isRecording) {
 238:       debugLogger.debug(\`[TestDebug] settings.experimental.voice:
     \${JSON.stringify(settings.experimental.voice)}\`);
 239:   }  const kittyProtocol = useKittyKeyboardProtocol();
 240:   const isShellFocused = useShellFocusState();

 - InputPrompt (src/ui/components/InputPrompt.tsx:237:3)
 -Object.react-stack-botto
  m-frame                (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mod
                         e-2/node_modules/react-reconciler/cjs/react-reconciler.development.js:1585
                         9:20)
 -renderWithHook
  s            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_m
               odules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionCompo
  nent              (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/n
                    ode_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19)
 -beginWork
          (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_module
          s/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 -runWithFiberInD
  EV            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
 -performUnitOfWo
  rk            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12834:22)
 -workLoopSync
             (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mod
             ules/react-reconciler/cjs/react-reconciler.development.js:12644:41)
 -renderRootSyn
  c           (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_mo
              dules/react-reconciler/cjs/react-reconciler.development.js:12624:11)
 -performWorkOnRo
  ot            (/Users/abhijitbalaji/projects/gemini-cli.worktrees/abhijit-2592-voice-mode-2/node_
                modules/react-reconciler/cjs/react-reconciler.development.js:12135:44)
"
`;

exports[`InputPrompt > multiline rendering > should correctly render multiline input including blank lines 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────
 > hello

   world 
────────────────────────────────────────────────────────────────────────────────────────────────────"
`;

exports[`InputPrompt > snapshots > should not show inverted cursor when shell is focused 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >   Type your message or @path/to/file                                                             
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
`;

exports[`InputPrompt > snapshots > should render correctly in shell mode 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 !   Type your message or @path/to/file                                                             
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > snapshots > should render correctly in yolo mode 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 *   Type your message or @path/to/file                                                             
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`InputPrompt > snapshots > should render correctly when accepting edits 1`] = `
"▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >   Type your message or @path/to/file                                                             
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;
